      overriding \code{SIMPLIFY} to \code{FALSE}. (\PR{17653})

      \item \code{as.difftime()} gets new optional \code{tz = "UTC"}
      argument which should fix behaviour during daylight savings
      changeover days, fixing \PR{16764}, thanks to proposals and analysis
      by Johannes Ranke and Kirill Müller.

      \item \code{round()} correctly rounds \dQuote{to even} in more cases,
      thanks to increased internal accuracy via code simplification
      proposed by Adam Wheeler in his report (\PR{17668}).

      \item Inheritance information on S4 classes is maintained more
      consistently, particularly in the case of class unions (in part
      due to \PR{17596} and a report from Ezra Tucker).

      \item \code{is()} behaves more robustly when \code{class2} is a
      \code{classRepresentation} object.

      \item The warning message when attempting to export an nonexistant
      class is now more readable; thanks to Thierry Onkelinx for
      recognizing the problem.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.2 patched}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item The included LAPACK has been updated to version 3.9.0 (for
      the included routines, just bug fixes).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{update(form, new)} in the case of a long \code{new}
      formula sometimes wrongly eliminated the intercept from \code{form},
      or (more rarely) added a garbage term (or seg.faulted !); reported by Mathias Ambühl in
      \PR{16326}.
      %% There is *still* a bug left but at least no seg.faulting memory corruption
      %% Will be ported to .. "patched" once that is fixed ..
    }
  }
}

\section{\Rlogo CHANGES IN R 3.6.2}{

  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{runmed(x, *)} gains a new option \code{na.action}
      determining \emph{how} to handle \code{NaN} or \code{NA} in \code{x}.

      \item \code{dotchart()} gains new options \code{ann}, \code{xaxt},